objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>This is for use in components only. Don&apos;t be a dick and change it.</description>
        <formula>Primary_Contact__r.LastName +
&quot;, &quot; + Primary_Contact__r.FirstName +
IF(Secondary_Contact__c != NULL, IF(Secondary_Contact__r.LastName = Primary_Contact__r.LastName, &quot; &amp; &quot; + Secondary_Contact__r.FirstName, &quot; &amp; &quot; + Secondary_Contact__r.LastName + &quot;, &quot; + Secondary_Contact__r.FirstName), NULL) + &quot; Household&quot;</formula>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Disposition__c</fullName>
        <label>Account Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DNC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <description>The count of contacts. Using Rollup Helper</description>
        <inlineHelpText>The count of contacts. Using Rollup Helper</inlineHelpText>
        <label>Contact Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Est_Home__c</fullName>
        <label>Est. Home</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Lead_Source__c</fullName>
        <label>Name of Lead Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Count__c</fullName>
        <label>Open Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Household</relationshipLabel>
        <relationshipName>Household_Primary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Residence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Residence</label>
        <referenceTo>RetailStore</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residential_Properties_Owned__c</fullName>
        <label>Residential Properties Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Household</relationshipLabel>
        <relationshipName>Household_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Nurturing</fullName>
                </value>
                <value>
                    <fullName>Rehashing</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_Opportunities__c</fullName>
        <label>Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>companycam__ProjectID__c</fullName>
        <label>CompanyCam Project ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3UltimateParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>dc3UltimateParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isCurrent_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDo_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingAddressStatus__c</fullName>
        <label>Billing Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__BillingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Accounts (BillingCountryLookup)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingLocationAccuracy__c</fullName>
        <label>Billing Location Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__BillingLocationSource__c</fullName>
        <label>Billing Location Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__BillingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Accounts (BillingStateLookup)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingZipCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Zip/Postal Code Lookup</label>
        <referenceTo>pw_cc__ZipCode__c</referenceTo>
        <relationshipLabel>Accounts (BillingZIPCodeLookup)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingAddressStatus__c</fullName>
        <label>Shipping Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>ShippingAccounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingLocationAccuracy__c</fullName>
        <label>Shipping Location Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingLocationSource__c</fullName>
        <label>Shipping Location Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>ShippingAccounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingZipCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Zip/Postal Code Lookup</label>
        <referenceTo>pw_cc__ZipCode__c</referenceTo>
        <relationshipLabel>ShippingAccounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>recordval__rv2BillingAddressStatusCode__c</fullName>
        <label>RV Billing Address Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2FaxStatusCode__c</fullName>
        <label>RV Fax Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2PhoneStatusCode__c</fullName>
        <label>RV Mobile Phone Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2ShippingAddressStatusCode__c</fullName>
        <label>RV Shipping Address Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2Status__c</fullName>
        <label>RV Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>recordval__RV2RecordStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>recordval__rv2Validation__c</fullName>
        <label>RV Validation Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__testCurrency__c</fullName>
        <label>Currency Test</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Stage__c</columns>
        <columns>Account_Disposition__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Won_Opportunities__c</columns>
        <columns>isDo_Not_Call__c</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Stage__c</columns>
        <columns>Account_Disposition__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Won_Opportunities__c</columns>
        <columns>isDo_Not_Call__c</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Commercial</fullName>
        <active>false</active>
        <label>Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <description>Other home improved companies. Used for tracking current customer assets.</description>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>Household</description>
        <label>Household</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>